--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: hcup
-Title: What the Package Does (One Line, Title Case)
+Title: Implementation of HCUP Software Tools in R
 Version: 0.0.0.9000
 Authors@R: 
     person("Hunter", "Ratliff", , "hunterratliff.cv@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-4978-1998"))
-Description: What the package does (one paragraph).
+Description: Adapts the software provided by the Healthcare Cost and Utilization Project (HCUP) 
+  for analyses of administrative database using International Classification of Diseases (ICD) 
+  codes within the R statistical environment.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
