--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,5 +2,8 @@ pandoc: 2.3.1
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles: {}
-last_built: 2022-04-14T03:29Z
+last_built: 2022-04-14T23:52Z
+urls:
+  reference: https://hunterratliff1.github.io/hcup/index.html/reference
+  article: https://hunterratliff1.github.io/hcup/index.html/articles
 
