--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,10 @@
 pandoc: 2.3.1
 pkgdown: 2.0.2
 pkgdown_sha: ~
-articles: {}
-last_built: 2022-04-15T00:03Z
+articles:
+  ccsr-dx: ccsr-dx.html
+  procedures: procedures.html
+last_built: 2022-04-15T03:09Z
 urls:
   reference: https://hunterratliff1.github.io/hcup/index.html/reference
   article: https://hunterratliff1.github.io/hcup/index.html/articles
