--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,9 @@ export(classify_chronic)
 export(classify_pr)
 export(explain_ccs)
 export(explain_ccsr)
+export(mutate_ccsr_dx)
 importFrom(dplyr,"%>%")
+importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
