--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(classify_pr)
 export(explain_ccs)
 export(explain_ccsr)
 export(mutate_ccsr_dx)
+export(reverse_ccsr)
 importFrom(dplyr,"%>%")
 importFrom(lifecycle,deprecated)
 importFrom(magrittr,"%>%")
