Add test to make sure lookup table work

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,8 @@ Imports:
     rlang,
     stringr,
     tibble,
-    tidyr (>= 1.0.0)
+    tidyr (>= 1.0.0),
+    waldo
 Remotes: 
     HunterRatliff1/hcup.data
 Suggests: 
